@@ -4,6 +4,7 @@ T (svnr) description
 
 * (1036) Moved v1.4 branch into branches, replaced trunk with v1.6 branch
 * (1037) Bumped TnFOX to v0.90
+* (1038) Restored FXString::fill() which for some reason Jeroen removed
 
 v0.87 11th July 2007:
 -=-=-=-=-=-=-=-=-=-=-
